# analyzeMFT

./: .flake8  .gitignore  CHANGES.md  CHANGES.txt  CONTRIBUTING.MD  LICENSE.txt  README  README.md  README.txt  USAGE.md  analyzeMFT-oop.py  analyzeMFT.py  final_output.csv  final_test.mft  output.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  sample_config.json  security_test.mft  setup.py  test.mft  test.txt  test_output.csv  test_sample.mft  test_validation.csv  utils.py
.github/: CONTRIBUTING.md  FUNDING.yml  README.md  SECURITY.md  dependabot.yml  pull_request_template.md
analyze_mft/: __init__.py  attribute_parser.py  common_imports.py  constants.py  csv_writer.py  file_handler.py  json_writer.py  logger.py  mft_parser.py  mft_record.py  options_parser.py  thread_manager.py  windows_time.py
analyzemft/: __init__.py  a.py  analyzeMFT.py  analyzemft.py  bitparse.py  cli.py  config.py  error_handler.py  main.py  mft.py  mftFileOperations.py  mft_analyzer.py  mft_core.py  mft_formatter.py  mft_formatters.py  mft_output.py  mft_reference.py  mft_session.py  mft_testing.py  mft_utils.py  mftsession.py  mftutils.py
deprecated/: README.txt
scripts/: ci_interface.sh  fetch_gh_errors.py  gh_monitor.sh  webhook_server.py
testing/: analyzeMFT.py  mft.py  mftFilePathBuilder.py  mftOptions.py  mftsession.py
tests/: constants.py  generateMFT.py  readme  test_cli.py  test_config.py  test_constants.py  test_file_writers.py  test_hash_processor.py  test_integration.py  test_mft_analyzer.py  test_mft_record.py  test_sqlite_writer.py  (+3 more)
(+51 files in other folders)
